# nemu

./: .gitignore  COPYING  Makefile.am  README  configure.ac  i8080.h  ir.c  ir.h  parse.c  sys.h
drivers/: Makefile.am  i7seg.c
drivers/include/: drivers.h
guest-i8080/: Makefile.am  i7seg.c  parse.c  test.c
guest-i8080/include/: guest.h  i8080.h
include/: mmu.h  sys.h
libir/: Makefile.am  dump_ir.c  interp.c  ir.c
libir/include/: ir.h
libmdesc/: Makefile  Makefile.am  dtc-parser.y  dtc.l  test.c
mmio/: Makefile.am  mmio-pgd.c  mmio-undef.c
mmio/include/: mmio-defs.h  mmio-drv.h  mmio.h
mmu/: mmu.c
